# libodb-sqlite

./: .gitignore  CMakeLists.txt
cmake/modules/: FindODB.cmake  ODBUtilities.cmake  TargetArchitecture.cmake
frameworks/sqlite3/: CMakeLists.txt
odb/sqlite/: CMakeLists.txt  database.hxx  statement.cxx  statement.hxx  version.hxx  view-result.hxx
odb/sqlite/details/: config.h  config.h.in
